[package]
name = "binext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
rand = { version = "0.8.5", features = ["min_const_gen"] }
criterion = "0.4"

[[bench]]
name = "benches_entrypoint"
harness = false
