[package]
name = "binext"
version = "1.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/AlvaroMS25/binext"
readme = "README.md"
description = "A library to read/write structs from/to buffers"
keywords = ["binary", "struct", "io"]
categories = ["encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
rand = { version = "0.8.5", features = ["min_const_gen"] }
criterion = "0.4"

[[bench]]
name = "benches_entrypoint"
harness = false
